add email and phone inputs

--- a/index.html
+++ b/index.html
@@ -60,7 +60,17 @@
                         <svg><use xlink:href="#input2"></use></svg>
                     </div>
                 </li>
-                
+                <!--Da mesma forma, o segundo item da lista também conterá dois campos de entrada junto com seus SVGs-->
+                <li class="grid grid-2">
+                    <div class="form-wrapper"> <!-- Campo E-mail-->
+                        <input type="email" placeholder="Email*" required>
+                        <svg><use xlink:href="#input3"></use></svg>
+                    </div>
+                    <div class="form-wrapper"> <!-- Campo Telefone-->
+                        <input type="tel" placeholder="Telefone: (XX)XXXXX-XXXX">
+                        <svg><use xlink:href="#input4"></use></svg>
+                    </div>
+                </li>
             </ul>
         </div>
     </form>
