--- a/index.html
+++ b/index.html
@@ -118,5 +118,11 @@
         </div>
     </form>
     
+    <footer>
+        <div class="container">
+            <small>Feito com <span>❤</span> por <a href="http://linkedin.com/in/dgorodrigues7" target="_blank">Diego Rodrigues</a>
+            </small>
+        </div>
+    </footer>
 </body>
 </html>
